--- a/app/theme/dark.css
+++ b/app/theme/dark.css
@@ -1,6 +1,6 @@
-:root{
-    --bg-color: #545974;
-    --primary-default: #FF6464;
-    --neutral-text: #fff;
-    --neutral-grey: #BABABA;
+:root {
+  --bg-color: #545974;
+  --primary-default: #ff6464;
+  --neutral-text: #fff;
+  --neutral-grey: #bababa;
 }
