--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,13 @@
   margin: 0;
 }
 
-
+.root {
+  width: 100%;
+  max-width: 1100px;
+  margin: 0 auto;
+  height: 100vh;
+  font-family: var(--bebas-neue);
+}
 
 html,
 body {
@@ -19,4 +25,7 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
+button {
+  background: none;
+  border: none;
+}
