--- a/app/theme/light.css
+++ b/app/theme/light.css
@@ -1,7 +1,6 @@
-.app_light_theme{
-    --bg-color: #fff;
-    --primary-default: #FF6464;
-    --neutral-text: #545974;
-    --neutral-grey: #BABABA;
-
+.app_light_theme {
+  --bg-color: #fff;
+  --primary-default: #ff6464;
+  --neutral-text: #545974;
+  --neutral-grey: #bababa;
 }
