--- a/app/globals.css
+++ b/app/globals.css
@@ -11,8 +11,9 @@
   width: 100%;
   max-width: 1100px;
   margin: 0 auto;
-  height: 100vh;
+  height: 100%;
   font-family: var(--bebas-neue);
+  min-height: 100vh;
 }
 
 html,
