--- a/components/MainPageSlider/MainPageSlider.module.scss
+++ b/components/MainPageSlider/MainPageSlider.module.scss
@@ -2,6 +2,8 @@
 .title {
   margin-top: 7.5rem;
   font-size: 4rem;
+  user-select: none;
+  pointer-events: none;
   .neutralText{
     color: var(--neutral-text);
   }
