--- a/app/theme/dark.css
+++ b/app/theme/dark.css
@@ -3,4 +3,6 @@
   --primary-default: #ff6464;
   --neutral-text: #fff;
   --neutral-grey: #bababa;
+  --neutral-input: #F1F1F1;
+  --neutral-card: #767a90;
 }
