--- a/app/theme/light.css
+++ b/app/theme/light.css
@@ -3,4 +3,7 @@
   --primary-default: #ff6464;
   --neutral-text: #545974;
   --neutral-grey: #bababa;
+  --neutral-input: #F1F1F1;
+  --neutral-card: #fff;
+
 }
