--- a/components/MainPageSlider/MainPageSlider.module.scss
+++ b/components/MainPageSlider/MainPageSlider.module.scss
@@ -1,6 +1,5 @@
 
 .title {
-  margin-top: 7.5rem;
   font-size: 4rem;
   user-select: none;
   pointer-events: none;
@@ -13,7 +12,7 @@
 }
 
 .buttons{
-  margin-top: 8rem;
+  margin-top: 11%;
   display: flex;
   gap: 25px;
   .button{
