--- a/ui-kit/Button/Button.module.scss
+++ b/ui-kit/Button/Button.module.scss
@@ -7,6 +7,7 @@
   max-width: max-content;
   cursor: pointer;
   font-weight: 400;
+  transition: filter 0.3s;
 }
 
 .outline{
@@ -22,3 +23,6 @@
 
 }
 
+.loading{
+  filter: grayscale(1);
+}
