--- a/components/NavMenu/NavMenu.module.scss
+++ b/components/NavMenu/NavMenu.module.scss
@@ -17,6 +17,8 @@
     background: var(--neutral-card);
     border-radius: 0.625rem;
     padding: 0.5rem;
+    box-shadow: 3px 33px 0 50px #545974;
+
   }
 
 
