добавил перелючатель темы

--- a/components/AccountsList/AccountItem/AccountItem.module.scss
+++ b/components/AccountsList/AccountItem/AccountItem.module.scss
@@ -24,12 +24,14 @@
   align-items: center;
   justify-content: center;
   margin-right: 1.5rem;
-  filter: grayscale(0.7);
 }
 
 .icon {
-  width: 1.6rem;
-  height: 1.6rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  color: var(--primary-default);
 }
 
 .socialName {
