--- a/app/globals.scss
+++ b/app/globals.scss
@@ -25,7 +25,7 @@ body::-webkit-scrollbar-thumb {
   max-width: 1100px;
   margin: 0 auto;
   height: 100%;
-  font-family: var(--bebas-neue);
+  font-family: var(--play);
   min-height: 100vh;
   @include for-mobile{
     padding: 1rem;
