--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -15,6 +15,7 @@
     letter-spacing: 2px;
     height: 40px;
     display: flex;
+    font-weight: 700;
     justify-content: center;
   }
   .line {
