--- a/components/MainPageSlider/MainPageSlider.module.scss
+++ b/components/MainPageSlider/MainPageSlider.module.scss
@@ -30,6 +30,6 @@
 .description{
   color: var(--neutral-grey);
   font-size: 1.5rem;
-  font-family: var(--poppins);
+  font-family: var(--play);
   font-weight: 400;
 }
