--- a/components/AuthPage/AuthPage.module.scss
+++ b/components/AuthPage/AuthPage.module.scss
@@ -2,12 +2,12 @@
   margin-top: 5%;
   color: var(--neutral-text);
   font-size: 6rem;
-  font-weight: 400;
+  font-weight: 700;
   line-height: normal;
 }
 
 .subtitle{
-  font-family: var(--poppins);
+  font-family: var(--play);
   font-size: 1.5rem;
   color: var(--neutral-grey);
   font-weight: 400;
