--- a/components/FullScreenLoading/FullScreenLoading.module.scss
+++ b/components/FullScreenLoading/FullScreenLoading.module.scss
@@ -19,7 +19,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: var(--bebas-neue);
+  font-family: var(--play);
   flex-direction: column;
 
 
@@ -51,6 +51,7 @@
 
   .stars{
     letter-spacing: 2px;
+    font-weight: 700;
     height: 40px;
     display: flex;
     &__star{
@@ -94,7 +95,7 @@
 
 .description {
   //margin-top: auto;
-  font-family: var(--poppins);
+  font-family: var(--play);
   font-size: 1rem;
   font-style: normal;
   font-weight: 400;
