--- a/components/HeaderBlock/HeaderBlock.module.scss
+++ b/components/HeaderBlock/HeaderBlock.module.scss
@@ -4,7 +4,6 @@
   width: 50%;
   display: flex;
   align-items: center;
-  //justify-content: space-between;
   gap: 1rem;
   margin: 1.5rem 0;
 
@@ -34,6 +33,7 @@
   color: var(--primary-default);
   font-size: 3.5rem;
   line-height: 1;
+  font-weight: 700;
 }
 
 .avatar{
@@ -53,6 +53,8 @@
   width: 49%;
   height: 10rem;
   display: flex;
+  justify-content: space-between;
+  gap: 0.5rem;
   flex-direction: row;
   padding: 1.2rem;
   border: 2px solid var(--neutral-text);
@@ -67,6 +69,10 @@
 .email{
   color: var(--neutral-grey);
   font-size: 0.85rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 100%;
 }
 
 .name{
@@ -77,7 +83,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding-left: 1rem;
+  width: 62%;
 
   @include for-mobile{
     padding-left: 0;
