--- a/ui-kit/Button/Button.module.scss
+++ b/ui-kit/Button/Button.module.scss
@@ -1,13 +1,13 @@
 .button{
   font-size: 1.5rem;
-  font-family: var(--bebas-neue);
+  font-family: var(--play);
   padding: 5px 20px;
   border-radius: 0.625rem;
   min-width: 150px;
   max-width: max-content;
   cursor: pointer;
-  font-weight: 400;
   transition: filter 0.3s;
+  font-weight: 700;
 }
 
 .outline{
