--- a/app/globals.scss
+++ b/app/globals.scss
@@ -12,7 +12,8 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  background: var(--neutral-grey);        /* color of the tracking area */
+  background: var(--bg-color);
+  max-width: 8px;
 }
 
 body::-webkit-scrollbar-thumb {
@@ -36,6 +37,10 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+}
+
+html{
+  overflow-y: scroll;
 }
 
 a {
