--- a/app/accounts/[id]/styles.module.scss
+++ b/app/accounts/[id]/styles.module.scss
@@ -4,6 +4,21 @@
   justify-content: space-between;
 }
 
+.checker{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  color: var(--neutral-input);
+  font-size: 1.5rem;
+}
+
+.title{
+  display: flex;
+  align-items: baseline;
+  flex-direction: column;
+}
+
 .h1{
   font-size: 4rem;
   line-height: normal;
