--- a/components/LogoutButton/LogoutButton.module.scss
+++ b/components/LogoutButton/LogoutButton.module.scss
@@ -1,16 +1,16 @@
 @import '@/app/mixins';
 
-.button{
+.button {
   padding: 0.5rem;
   background: var(--primary-default);
   font-weight: 700;
   outline: none;
   border-radius: 0.625rem;
   cursor: pointer;
-  color: var(--neutral-text);
+  color: #fff;
   font-size: 1rem;
   font-family: var(--play);
-  @include for-mobile{
+  @include for-mobile {
     display: none;
   }
 }
