--- a/ui-kit/SearchBar/SearchBar.module.scss
+++ b/ui-kit/SearchBar/SearchBar.module.scss
@@ -5,6 +5,7 @@
   flex: 1;
   color: #fff;
   font-size: 1rem;
+  padding: 0.5rem 1.25rem;
 
   &::placeholder {
     color: var(--neutral-grey);
@@ -14,7 +15,7 @@
 }
 
 .searchIcon {
-  padding-right: 0.5rem;
+  padding-left: 1rem;
   width: max-content;
 }
 
@@ -27,7 +28,6 @@
   background: var(--neutral-card);
   backdrop-filter: blur(15px);
   border-radius: 0.625rem;
-  padding: 0.5rem 1.25rem;
 
   &:active,
   &:focus-within {
