--- a/components/AccountCreator/AccountCreator.module.scss
+++ b/components/AccountCreator/AccountCreator.module.scss
@@ -69,7 +69,7 @@
 
 .editMode {
   div {
-    border-color: transparent;
+    border-color: var(--neutral-grey);
     pointer-events: auto;
     transition: all 0.5s;
     cursor: default;
