--- a/ui-kit/SearchBar/SearchBar.module.scss
+++ b/ui-kit/SearchBar/SearchBar.module.scss
@@ -3,7 +3,7 @@
   border: 0;
   background: transparent;
   flex: 1;
-  color: #fff;
+  color: var(--neutral-input);
   font-size: 1rem;
   padding: 0.5rem 1.25rem;
 
