--- a/components/HeaderBlock/HeaderBlock.module.scss
+++ b/components/HeaderBlock/HeaderBlock.module.scss
@@ -39,10 +39,11 @@
   font-weight: 700;
 }
 
-.avatar {
+.avatar.avatar {
   border: 2px solid var(--primary-default);
   border-radius: 0.625rem;
   max-width: 6rem;
+  height: 7.5rem;
   object-fit: cover;
   @include for-mobile {
     height: 6rem;
