Доработки по аккаунтам

--- a/components/AccountCreator/AccountCreator.module.scss
+++ b/components/AccountCreator/AccountCreator.module.scss
@@ -49,7 +49,7 @@
   visibility: hidden;
 }
 .form {
-  margin-top: 3rem;
+  margin-top: 2rem;
   width: 50%;
   @include for-mobile {
     width: 100%;
@@ -75,5 +75,9 @@
 }
 
 .wrapper {
-  //padding-bottom: 10rem;
+  border: 2px solid var(--neutral-text);
+  background: var(--neutral-card);
+  padding: 1.2rem;
+  border-radius: 0.625rem;
+
 }
