--- a/components/HeaderBlock/HeaderBlock.module.scss
+++ b/components/HeaderBlock/HeaderBlock.module.scss
@@ -47,7 +47,7 @@
   object-fit: cover;
   @include for-mobile {
     height: 6rem;
-    width: fit-content;
+    margin: 0;
   }
 }
 
@@ -66,6 +66,7 @@
   @include for-mobile {
     flex-direction: column;
     padding: 0.5rem;
+    align-items: flex-start;
   }
 }
 
