--- a/components/FullScreenLoading/FullScreenLoading.module.scss
+++ b/components/FullScreenLoading/FullScreenLoading.module.scss
@@ -1,6 +1,7 @@
 .background {
   background: var(--bg-color);
   display: flex;
+  padding: 1.5rem;
   align-items: center;
   justify-content: center;
   flex-direction: column;
