--- a/components/NavMenu/NavMenu.module.scss
+++ b/components/NavMenu/NavMenu.module.scss
@@ -13,22 +13,22 @@
     height: auto;
     width: 90%;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     background: var(--navmenu-bg);
+    padding: 0;
     border-radius: 0.625rem;
-    padding: 0.5rem;
+    overflow: hidden;
     box-shadow: 3px 33px 0 50px var(--navmenu-shadow);
     z-index: 1;
   }
 }
 
-.onlyMobile{
-  @include for-desktop{
+.onlyMobile {
+  @include for-desktop {
     display: none;
   }
 }
 
-.add,
 .item {
   display: flex;
   width: 100%;
@@ -41,16 +41,19 @@
   transition: filter 0.5s;
 
   &:first-child {
-    border-radius: 0.625rem 0.625rem 0 0;
-    border-top: 2px solid var(--neutral-input);
+    @include for-desktop {
+      border-radius: 0.625rem 0.625rem 0 0;
+      border-top: 2px solid var(--neutral-input);
+    }
   }
 
   &:last-child {
-    border-radius: 0 0 0.625rem 0.625rem;
-    border-bottom: 2px solid var(--neutral-input);
+    @include for-desktop {
+      border-radius: 0 0 0.625rem 0.625rem;
+      border-bottom: 2px solid var(--neutral-input);
+    }
   }
   @include for-mobile {
-    border-radius: 0;
     display: flex;
     justify-content: center;
     background: var(--navmenu-bg);
@@ -58,38 +61,15 @@
 
   &:hover {
     filter: saturate(200%);
-    transition: filter 0.5s;
   }
 }
 
 .item {
   @include for-mobile {
-    width: 38%;
-    &:nth-child(0) {
-      order: 0;
-    }
-    &:nth-child(3) {
-      order: 3;
-    }
-    &:nth-child(1n) {
-      border: 0;
-    }
-  }
-}
-
-.add.add {
-  background: var(--primary-default);
-  .text {
-    color: #fff;
-  }
-  @include for-mobile {
-    order: 1;
-    border-radius: 50%;
-    width: 3.75rem;
-    height: 3.75rem;
+    flex: 1;
+    height: 3rem;
     border: 0;
-    transform: translateY(-1.5rem);
-    filter: drop-shadow(0px 5px 10px rgba(255, 100, 100, 0.3));
+    padding: 0;
   }
 }
 
@@ -108,5 +88,19 @@
   height: 1.5rem;
   @include for-mobile {
     fill: #fff;
+  }
+}
+
+.active {
+  background: var(--primary-default);
+  &:hover{
+    filter: none;
+  }
+  .text {
+    color: #fff;
+  }
+  .icon {
+    fill: #fff;
+    z-index: 1;
   }
 }
