HTTPS и куча изменений

--- a/components/NavMenu/NavMenu.module.scss
+++ b/components/NavMenu/NavMenu.module.scss
@@ -6,7 +6,9 @@
   flex: 1;
   height: 100%;
   border-radius: 0.625rem;
+  border: 2px solid var(--neutral-input);
   @include for-mobile {
+    border: none;
     position: fixed;
     bottom: 1rem;
     margin: 0 auto;
@@ -14,7 +16,7 @@
     width: 90%;
     flex-direction: row;
     justify-content: space-evenly;
-    background: var(--navmenu-bg);
+    //background: var(--navmenu-bg);
     padding: 0;
     border-radius: 0.625rem;
     overflow: hidden;
@@ -36,31 +38,22 @@
   align-items: center;
   padding: 0.9rem;
   background: var(--neutral-card);
-  border-left: 2px solid var(--neutral-input);
-  border-right: 2px solid var(--neutral-input);
   transition: filter 0.5s;
 
-  &:first-child {
-    @include for-desktop {
+  @include for-desktop {
+    &:first-child {
       border-radius: 0.625rem 0.625rem 0 0;
-      border-top: 2px solid var(--neutral-input);
+    }
+
+    &:last-child {
+      border-radius: 0 0 0.625rem 0.625rem;
     }
   }
 
-  &:last-child {
-    @include for-desktop {
-      border-radius: 0 0 0.625rem 0.625rem;
-      border-bottom: 2px solid var(--neutral-input);
-    }
-  }
   @include for-mobile {
     display: flex;
     justify-content: center;
     background: var(--navmenu-bg);
-  }
-
-  &:hover {
-    filter: saturate(200%);
   }
 }
 
@@ -93,7 +86,7 @@
 
 .active {
   background: var(--primary-default);
-  &:hover{
+  &:hover {
     filter: none;
   }
   .text {
