--- a/components/ProfileHeader/ProfilePage.module.scss
+++ b/components/ProfileHeader/ProfilePage.module.scss
@@ -1,3 +1,6 @@
+.wrapper{
+  display: flex;
+}
 
 .profile {
   display: flex;
@@ -31,9 +34,18 @@
 
 .status{
   padding-left: 1.5rem;
-  color: green;
-  &.offline{
-    color: red;
+  color: var(--primary-default);
+  display: flex;
+  align-items: center;
+  position: relative;
+  &:before{
+    background:var(--primary-default);
+    position: absolute;
+    left: 0.7rem;
+    content: '';
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
   }
 }
 
