--- a/components/ProfileMenu/ProfileMenu.module.scss
+++ b/components/ProfileMenu/ProfileMenu.module.scss
@@ -1,8 +1,8 @@
-.wrapper{
+.wrapper {
   display: flex;
   gap: 1rem;
 }
-.menu{
+.menu {
   display: flex;
   flex-direction: column;
   border: 2px solid var(--neutral-input);
@@ -12,21 +12,20 @@
   height: max-content;
 }
 
-.link{
+.link {
   padding: 1.2rem;
-  color: var(--neutral-text);;
+  color: var(--neutral-text);
   font-weight: 700;
 }
 
-.active{
+.active {
   background: var(--primary-default);
   color: #fff;
 }
 
-.component{
+.component {
   flex: 1;
   border: 2px solid var(--neutral-input);
   border-radius: 0.625rem;
   padding: 1.2rem;
-
 }
