--- a/ui-kit/DragDrop/DragDrop.module.scss
+++ b/ui-kit/DragDrop/DragDrop.module.scss
@@ -1,4 +1,4 @@
-.input{
+.input {
   display: none;
 }
 
@@ -13,12 +13,10 @@
   justify-content: center;
   cursor: pointer;
   background: var(--neutral-card);
-  box-shadow: 0px 0px 40px 0px rgba(255, 255, 255, 0.2);
-
-
+  box-shadow: 0 0 40px 0 rgba(255, 255, 255, 0.2);
 }
 
-.uploadText{
+.uploadText {
   text-align: center;
   width: 100%;
   height: 100%;
@@ -31,33 +29,33 @@
   border-radius: 0.625rem;
 }
 
-.topSpan{
+.topSpan {
   font-weight: 600;
   color: var(--neutral-text);
 }
 
-.middleSpan{
+.middleSpan {
   color: var(--neutral-grey);
   font-weight: 600;
 }
 
-.bottomButton{
+.bottomButton {
   font-size: 1rem;
   padding: 0.5rem;
 }
 
-.image{
+.image {
   height: 15rem;
   width: 12rem;
 }
 
-.previewWrapper{
+.previewWrapper {
   position: relative;
   width: max-content;
   height: 15rem;
 }
 
-.deleteButton > svg{
+.deleteButton > svg {
   position: absolute;
   right: 0.5rem;
   color: var(--primary-default);
@@ -67,6 +65,6 @@
   width: 2rem;
 }
 
-.disableEvents{
+.disableEvents {
   pointer-events: none;
 }
