--- a/components/ProfileHeader/ProfilePage.module.scss
+++ b/components/ProfileHeader/ProfilePage.module.scss
@@ -4,8 +4,9 @@
 
 .profile {
   display: flex;
-  width: 100%;
   flex-direction: column;
+  padding-left: 1rem;
+  flex: 1;
 }
 
 .profileInfo {
@@ -16,7 +17,6 @@
 
 .form {
   margin-top: 1.5rem;
-  width: 50%;
 }
 
 .span {
@@ -47,4 +47,10 @@
     height: 0.5rem;
     border-radius: 50%;
   }
+}
+
+.actions{
+  display: flex;
+  gap: 1rem;
+  justify-content: flex-end;
 }
