--- a/ui-kit/DragDrop/DragDrop.module.scss
+++ b/ui-kit/DragDrop/DragDrop.module.scss
@@ -7,26 +7,27 @@
   display: flex;
   padding: 0.5rem;
   border-radius: 0.625rem;
-  border: 2px solid var(--neutral-text);
-  width: 12rem;
+  width: 11rem;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   background: var(--neutral-card);
-  box-shadow: 0 0 40px 0 rgba(255, 255, 255, 0.2);
+  border: 2px dashed var(--neutral-text);
 }
 
 .uploadText {
   text-align: center;
   width: 100%;
   height: 100%;
-  padding: 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   gap: 0.5rem;
-  border: 1px dashed var(--neutral-text);
   border-radius: 0.625rem;
+  & > *{
+    pointer-events: none;
+  }
 }
 
 .topSpan {
@@ -46,7 +47,8 @@
 
 .image {
   height: 15rem;
-  width: 12rem;
+  width: 11rem;
+  border: 2px solid #fff;
 }
 
 .previewWrapper {
@@ -55,16 +57,48 @@
   height: 15rem;
 }
 
-.deleteButton > svg {
+.actions{
   position: absolute;
-  right: 0.5rem;
-  color: var(--primary-default);
   top: 0.5rem;
-  cursor: pointer;
-  height: 2rem;
-  width: 2rem;
+  right: 0.5rem;
+  gap: 0.5rem;
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+  justify-content: flex-end;
+  border-radius: 0 0 0.625rem 0.625rem;
+  opacity: 0.6;
+  transition: opacity 0.2s;
+
+ &:hover{
+   opacity: 1;
+ }
+
 }
 
-.disableEvents {
-  pointer-events: none;
+
+.button{
+  cursor: pointer;
+  height: 100%;
+  padding: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #fff;
+  border-radius: 50%;
+  & > svg{
+    width: 20px;
+    height: 20px;
+    color: var(--primary-default);
+  }
+}
+
+.draggable{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  &>svg{
+    color: var(--primary-default);
+  }
 }
