--- a/components/ProfileMenu/ProfileMenu.module.scss
+++ b/components/ProfileMenu/ProfileMenu.module.scss
@@ -1,6 +1,15 @@
+@import '@/app/mixins';
+
+
+
 .wrapper {
   display: flex;
   gap: 1rem;
+  @include for-mobile{
+    flex-direction: column;
+    margin-bottom: 5rem;
+
+  }
 }
 .menu {
   display: flex;
@@ -10,6 +19,11 @@
   border-radius: 0.625rem;
   overflow: hidden;
   height: max-content;
+  max-height: 23.5rem;
+  transition: max-height 0.2s linear;
+  @include for-mobile{
+    width: 100%;
+  }
 }
 
 .link {
@@ -28,4 +42,22 @@
   border: 2px solid var(--neutral-input);
   border-radius: 0.625rem;
   padding: 1.2rem;
+}
+
+.mobileMenu{
+  @include for-desktop{
+    display: none;
+  }
+  padding: 1.2rem;
+  color: #fff;
+  font-weight: 700;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.hideMenu{
+  @include for-mobile{
+    max-height: 3.875rem;
+  }
 }
