--- a/components/ProfileHeader/ProfilePage.module.scss
+++ b/components/ProfileHeader/ProfilePage.module.scss
@@ -1,5 +1,14 @@
+@import '@/app/mixins';
+
 .wrapper {
   display: flex;
+  @include for-mobile{
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 5rem;
+    padding-top: 8rem;
+  }
 }
 
 .profile {
@@ -7,6 +16,10 @@
   flex-direction: column;
   padding-left: 1rem;
   flex: 1;
+  @include for-mobile{
+    width: 100%;
+    padding: 0;
+  }
 }
 
 .profileInfo {
@@ -26,6 +39,9 @@
   display: flex;
   color: var(--neutral-text);
   font-weight: 600;
+  @include for-mobile{
+    justify-content: space-between;
+  }
 }
 
 .value {
@@ -53,9 +69,21 @@
   display: flex;
   gap: 1rem;
   justify-content: flex-end;
+  @include for-mobile{
+    gap: unset;
+    justify-content: space-between;
+  }
 }
 
 .button{
   font-size: 1rem;
   padding: 0.5rem
+}
+
+.statusInfo{
+  @include for-mobile{
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 }
