--- a/components/ProfileHeader/ProfilePage.module.scss
+++ b/components/ProfileHeader/ProfilePage.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
   display: flex;
-  @include for-mobile{
+  @include for-mobile {
     position: relative;
     flex-direction: column;
     align-items: center;
@@ -16,7 +16,7 @@
   flex-direction: column;
   padding-left: 1rem;
   flex: 1;
-  @include for-mobile{
+  @include for-mobile {
     width: 100%;
     padding: 0;
   }
@@ -39,7 +39,7 @@
   display: flex;
   color: var(--neutral-text);
   font-weight: 600;
-  @include for-mobile{
+  @include for-mobile {
     justify-content: space-between;
   }
 }
@@ -65,23 +65,23 @@
   }
 }
 
-.actions{
+.actions {
   display: flex;
   gap: 1rem;
   justify-content: flex-end;
-  @include for-mobile{
+  @include for-mobile {
     gap: unset;
     justify-content: space-between;
   }
 }
 
-.button{
+.button {
   font-size: 1rem;
-  padding: 0.5rem
+  padding: 0.5rem;
 }
 
-.statusInfo{
-  @include for-mobile{
+.statusInfo {
+  @include for-mobile {
     position: absolute;
     top: 0;
     left: 0;
