--- a/components/ProfileMenu/ProfileMenu.module.scss
+++ b/components/ProfileMenu/ProfileMenu.module.scss
@@ -39,6 +39,7 @@
   border: 2px solid var(--neutral-input);
   border-radius: 0.625rem;
   padding: 1.2rem;
+  margin-bottom: 2rem;
 }
 
 .mobileMenu {
