--- a/components/FullScreenLoading/FullScreenLoading.module.scss
+++ b/components/FullScreenLoading/FullScreenLoading.module.scss
@@ -1,3 +1,4 @@
+@import '@/app/mixins';
 .background {
   background: var(--bg-color);
   display: flex;
@@ -12,7 +13,7 @@
   left: 0;
   user-select: none;
   pointer-events: none;
-  z-index: 10;
+  z-index: 9999999;
 }
 
 .h1 {
@@ -92,11 +93,13 @@
 }
 
 .description {
-  //margin-top: auto;
   font-family: var(--play);
   font-size: 1rem;
   font-style: normal;
   font-weight: 400;
   color: var(--neutral-grey);
   margin-bottom: 20px;
+  @include for-mobile{
+    text-align: center;
+  }
 }
