--- a/components/WelcomeComponent/WelcomeComponent.module.scss
+++ b/components/WelcomeComponent/WelcomeComponent.module.scss
@@ -1,3 +1,4 @@
+@import '@/app/mixins';
 .wrapper {
   display: flex;
   width: 100%;
@@ -5,8 +6,12 @@
   align-items: center;
   margin-top: 5rem;
   gap: 1.5rem;
+  @include for-mobile{
+    margin-top: 0;
+    text-align: center;
+  }
 }
 
 .h1 {
-  color: #fff;
+  color: var(--neutral-text);
 }
