--- a/ui-kit/Input/Input.module.scss
+++ b/ui-kit/Input/Input.module.scss
@@ -1,3 +1,4 @@
+@import '@/app/mixins';
 .wrapper {
   position: relative;
   display: flex;
@@ -37,6 +38,9 @@
   &::placeholder {
     color: var(--neutral-grey);
     font-family: var(--play);
+  }
+  @include for-mobile{
+    font-size: 16px;
   }
 }
 
